--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,15 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: fastpages
-description: An easy to use blogging platform with support for Jupyter Notebooks.
+title: NETWORKING-AND-CYBERSEC
+description: your daily dose of networks and cybersecurity articles, tutorials
 github_username: tushar2411
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "networking"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
-url: "https://tushar2411.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://networks.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 ###########################################################
 #########  Special Instructions for baseurl ###############
@@ -39,8 +39,8 @@ baseurl: "/networking" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-    twitter: fastdotai
-    github: fastai
+    twitter: Tushar01_01
+    github: tushar2411
 
 # Set this to true to get LaTeX math equation support
 use_math: 
