--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: NETWORKING-AND-CYBERSEC
+title: NETWORKING AND CYBERSEC
 description: your daily dose of networks and cybersecurity articles, tutorials
 github_username: tushar2411
 # you can comment the below line out if your repo name is not different than your baseurl
